--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/postbackground"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="15dp">
 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -26,12 +27,14 @@
     android:layout_marginTop="24dp"
     android:textSize="24sp"
     android:textStyle="bold"
+    android:id="@+id/post_username"
     android:textColor="@color/black"
     android:text="@string/show_username"
     />
 </LinearLayout>
     <com.google.android.material.textview.MaterialTextView
         android:layout_width="match_parent"
+        android:id="@+id/post_content"
         android:layout_marginTop="50dp"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
